Finalizando doc api e methodo delete
